# Epam-cpp

./: CMakeLists.txt  CopyUtility.drawio  DataQueue.cpp  SharedMemoryWrapper.cpp  SharedMemoryWrapper.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  dataqueue.cpp  dataqueue.h  main.cpp  readme.md  rules.txt  runner.py  runner.sh  sharedmemorymanager.cpp  sharedmemorymanager.h  task.cpp  task.h  task2.drawio  threadpool.cpp  threadpool.h  util.cpp  util.h
.github/workflows/: cmake-single-platform.yml
